--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "inspect": "vue-cli-service inspect > current-webpack-settings.json"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "bulma": "^0.9.4",
     "casual": "^1.6.2",
     "vue": "^2.5.11"
@@ -26,6 +27,8 @@
     "@types/webpack": "^5.28.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
