--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.3.2",
     "bulma": "^0.9.4",
     "casual": "^1.6.2",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-router": "^3.6.5"
   },
   "browserslist": [
     "> 1%",
