--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bulma": "^0.9.4",
     "casual": "^1.6.2",
     "vue": "^2.5.11",
+    "vue-debounce": "^4.0.0",
     "vue-router": "^3.6.5"
   },
   "browserslist": [
