--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "casual": "^1.6.2",
     "vue": "^2.5.11",
     "vue-debounce": "^4.0.0",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
